--------------------------------------------------------------------------------
 Fusion 1.213 - August 29th, 2004
--------------------------------------------------------------------------------
- 07-10-04: Added @questskill to ALBGM. [Trihan]
- 07-10-04: Added @spiritball to ALBGM. [Trihan]
- 07-10-04: Added @luk to ALBGM. [Trihan]
- 07-10-04: Added @dex to ALBGM. [Trihan]
- 07-10-04: Added @int to ALBGM. [Trihan]
- 07-10-04: Added @vit to ALBGM. [Trihan]
- 07-10-04: Added @agi to ALBGM. [Trihan]
- 07-10-04: Added @str to ALBGM. [Trihan]
- 07-10-04: Fixed bug where @skpoint would set base level to 1001 if the value
	    entered would raise skill points to above 1001. [Trihan]
- 07-10-04: Added @stpoint to ALBGM. [Trihan]
- 07-10-04: Added @h to ALBGM. [Trihan]
- 07-10-04: Fixed the critical display for Assassins when a katar is equipped. [Trihan]
- 07-09-04: Fixed @help command. [Trihan]
- 07-09-04: Fixed #1091 - #item Result message wasn't showing correctly. [Trihan]
- 07-07-04: Updated the default starting map location (new_1-1). [Tsusai]
- 07-07-04: Made PvPN act like PvP. [Tsusai]
- 07-06-04: Fixed Skill Sight. [Darkhelmet]
- 07-06-04: Fixed Compile Error. [Darkhelmet]
- 07-05-04: Added PVPN mapinfo_db tag that can be overidden by Option_pvp. [Tsusai]


--------------------------------------------------------------------------------
 Fusion 1.212 - June 30th, 2004
--------------------------------------------------------------------------------
- 07-03-04: Added server flags (status.txt) to backup files. [AlexKreuz]
- 07-03-04: #1036 - Server flag loading and saving had issues. [AlexKreuz]
- 07-03-04: Game_Master cleanup. [AlexKreuz]
- 07-03-04: No more 10053/10054. Replaced with user friendly messages. [AlexKreuz]
- 07-03-04: Modified #changes to support oscripts and cscripts flags. [AlexKreuz]
- 07-03-04: Fixed Leader/Follow mobs caused pathfinding crash. [AlexKreuz]
- 07-03-04: Updated LOV calculations. Math laws were not true. [AlexKreuz]