@@ -1,6 +1,8 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 07-10-04: Added @model to ALBGM. [Trihan]
+- 07-10-04: Added @lostskill to ALBGM. [Trihan]
 - 07-10-04: Added @questskill to ALBGM. [Trihan]
 - 07-10-04: Added @spiritball to ALBGM. [Trihan]
 - 07-10-04: Added @luk to ALBGM. [Trihan]
